--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,7 @@ legend {
 /*   position: relative;*/
 /*   z-index: 5;*/
    padding: 2px 20px;
+   height: 58px;
 }
 
 
@@ -706,6 +707,10 @@ legend {
 }
 
 @media (max-width:850px) {
+   
+   .main-header__container {
+      height: 54px;
+   }
    
    .header__logo-link {
       max-width: 150px;
@@ -936,6 +941,10 @@ legend {
 @media (max-width: 440px) {
    .nav {
       width: 70%;
+   }
+   
+   .main-header__container {
+      height: 49px;
    }
    .header__logo-link {
       max-width: 130px;
@@ -4528,6 +4537,886 @@ outline: none;
    
    .elan_label_add {
       width: 270px;
+   }
+}
+
+
+/* Car add section styles */
+
+.elan_add_rule {
+/*    background-color: #ffc937;*/
+    background-color: #006aac;
+    max-width: 871px;
+    margin: 10px auto;
+    padding: 10px 10px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    color: #ffffff;
+    border-radius: 5px;
+
+}
+
+.cars__ads__main__inner3 {
+    display: flex;
+   flex-wrap: wrap;
+   padding-bottom: 20px;
+   justify-content: space-between;
+}
+
+._container_middle {
+   max-width: 1070px;
+   margin: 0 auto;
+   width: 100%;
+}
+
+._container_mini {
+   max-width: 1070px;
+   margin: 0 auto;
+   padding: 0 5px;
+}
+
+.cars__item2 {
+    width: 50%;
+    /*    border: 1px solid #e8e7e7;*/
+    margin: 0px 0px;
+
+}
+
+.number_only {
+    background-color: #ffba00;
+    max-width: 871px;
+    margin: 10px auto;
+    padding: 20px 15px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    color: #ffffff;
+    border-radius: 5px;
+
+}
+
+.number_only_style {
+    color: #ff0000;
+    color: #004774;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 0px 5px;
+}
+
+.ads_rule {
+/*    background-color: #ffc937;*/
+    background-color: #006aac;
+    max-width: 871px;
+    margin: 10px auto;
+    padding: 10px 10px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    color: #ffffff;
+    border-radius: 5px;
+
+}
+
+.marka_model_add {
+    display: flex;
+    margin: 0px 0px 0px 0px;
+    align-content: space-between;
+    /*    align-content: stretch;*/
+}
+
+.select_add {
+   position: relative;
+    margin: 10px 10px 10px 10px;
+    width: 45%;
+    border: 1px solid #a8a8a8;
+/*    width: 230px;*/
+    font-family: 'Roboto', sans-serif;
+/*    font-size: 18px;*/
+    color: #777;
+    font-size: 14px;
+/*    padding: 5px 0px;*/
+    padding: 9px 3px 9px 3px;
+    background-color: white;
+    border-radius: 4px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
+
+
+
+.select_add_t1 {
+    margin: 10px 10px 10px 10px;
+    width: 22%;
+/*    width: 230px;*/
+    font-family: 'Roboto', sans-serif;
+/*    font-size: 18px;*/
+    color: #777;
+    font-size: 14px;
+/*    padding: 5px 0px;*/
+    padding: 9px 3px 9px 3px;
+    border: 1px solid #a8a8a8;
+    border-radius: 4px;
+    background-color: white;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+
+}
+
+
+.select_add:hover,
+.select_add_t1:hover {
+    border: 1px solid #005d8e;
+        background-color: #f7f7f7;
+/*    box-shadow: 0 0 5px 3px rgba(0, 149, 185, 0.52); */
+}
+
+.select_add:focus,
+.select_add_t1:focus {
+    border: 1px solid #005d8e;
+    outline: none;
+    background-color: #f7f7f7;
+/*    outline-style: dashed;*/
+    box-shadow: 0px 0px 1px 1px rgba(0, 149, 185, 0.52);
+}
+
+.label_add,
+.label_add1 {
+    width: 170px;
+    margin: 10px 10px 10px 15px;
+    padding: 5px;
+    0px;
+    color: #464646;
+    font-weight: 600;
+    /*    padding: 0px 50px 0px 0px;*/
+}
+
+.label_add::after {
+    content: "*";
+    color: red;
+/*    vertical-align: super;*/
+}
+
+
+.input_add {
+    margin: 10px 5px 10px 10px;
+    border: 1px solid #a8a8a8;
+    border-radius: 4px;
+    width: 90px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    color: #777;
+    /*    font-size: 14px;*/
+/*    padding: 5px 3px;*/
+    padding: 9px 3px 9px 3px;
+    /*    border-radius: 2px;*/
+
+}
+
+.input_add:hover {
+    border: 1px solid #005d8e;
+        background-color: #f7f7f7;
+/*    padding: 5px 3px;*/
+    padding: 9px 3px 9px 3px;
+    font-size: 14px;
+/*    box-shadow: 0 0 5px 3px rgba(0, 149, 185, 0.52); */
+}
+
+.input_add:focus {
+    border: 1px solid #005d8e;
+    outline: none;
+    font-size: 14px;
+    background-color: #f7f7f7;
+/*    outline-style: dashed;*/
+/*    box-shadow: 0px 0px 1px 1px rgba(0, 149, 185, 0.52);*/
+}
+
+.radio_add {
+    /*    width: 15px;*/
+    margin: 0px 0px 0px 0px;
+    font-size: 10px;
+    color: #777;
+    padding: 5px 0px 0px 0px;
+    /*    border-radius: 4px;*/
+}
+
+
+.currency_add {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+
+
+.label_currency_add {
+    /*    width: 20px;*/
+    margin: 5px 5px 0px 0px;
+    font-size: 12px;
+    padding: 0px 5px 0px 0px;
+    color: #464646;
+    font-weight: 500;
+    /*    padding: 0px 50px 0px 0px;*/
+}
+
+.label_currency_add:hover {
+/*    border: 1px solid #005d8e;*/
+        background-color: #e3e3e3;
+/*    box-shadow: 0 0 5px 3px rgba(0, 149, 185, 0.52); */
+}
+
+.label_currency_add:focus {
+/*    border: 1px solid #005d8e;*/
+    outline: none;
+/*    background-color: #f7f7f7;*/
+/*    outline-style: dashed;*/
+    box-shadow: 0px 0px 1px 1px rgba(0, 149, 185, 0.52);
+}
+
+
+
+.checkbox_add {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+    vertical-align: middle;
+    /*    display: block;*/
+    /*    width: 50px;*/
+    margin: 10px 15px 5px 15px;
+    /*    width: 70px;*/
+    font-family: 'Roboto', sans-serif;
+    color: #777;
+    font-size: 14px;
+    /*    text-overflow: ellipsis;*/
+    /*    padding: 2px; 5px;*/
+    border-radius: 4px;
+    line-height: 1.1;
+}
+
+
+
+.label_checkbox_add1 {
+    width: 170px;
+    font-size: 14px;
+    margin: 0px 10px 10px 0px;
+    /*    margin: 10px 10px 10px 15px;*/
+    padding: 5px;
+    0px;
+    color: #464646;
+    font-weight: 600;
+    /*    padding: 0px 50px 0px 0px;*/
+
+}
+
+.label_checkbox_add1::after {
+    content: "*";
+    color: red;
+/*    vertical-align: super;*/
+}
+
+.label_checkbox_add {
+    width: 170px;
+    font-size: 14px;
+    margin: 0px 10px 10px 0px;
+    /*    margin: 10px 10px 10px 15px;*/
+    padding: 5px;
+    0px;
+    color: #464646;
+    font-weight: 600;
+    /*    padding: 0px 50px 0px 0px;*/
+
+}
+
+.pay_add {
+    display: flex;
+   flex-wrap: wrap;
+}
+
+.pay_method {
+    margin: 5px 10px 0px -2px;
+}
+
+.pay_method:hover {
+/*    border: 1px solid #005d8e;*/
+        background-color: #ebebeb;
+/*    box-shadow: 0 0 5px 3px rgba(0, 149, 185, 0.52); */
+}
+
+.pay_method:focus {
+/*    border: 1px solid #005d8e;*/
+    outline: none;
+/*    background-color: #f7f7f7;*/
+/*    outline-style: dashed;*/
+/*    box-shadow: 0px 0px 1px 1px rgba(0, 149, 185, 0.52);*/
+}
+
+.pay_method1 {
+    margin: 5px 2px 0px 5px;
+}
+
+.pay_add_estate {
+   margin-bottom: 15px;
+}
+
+.textarea_add {
+    margin: 20x 0px 0px 10px;
+    width: 95%;
+    max-width: 790px;
+    height: 100px;
+    padding: 5px 3px;
+    border: 1px solid #a7a7a7;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+   border-radius: 5px;
+}
+
+.estate_textarea {
+   margin-top: 10px;
+   margin-bottom: 40px;
+}
+
+.textarea_add:hover {
+    border: 1px solid #005d8e;
+        background-color: #f7f7f7;
+    padding: 5px 3px;
+    font-size: 14px;
+/*    box-shadow: 0 0 5px 3px rgba(0, 149, 185, 0.52); */
+}
+
+.textarea_add:focus {
+    border: 1px solid #005d8e;
+    outline: none;
+    font-size: 14px;
+    background-color: #f7f7f7;
+/*    background-color: #f7f7f7;*/
+/*    outline-style: dashed;*/
+/*    box-shadow: 0px 0px 1px 1px rgba(0, 149, 185, 0.52);*/
+}
+
+.label_add_textarea {
+    width: 170px;
+    margin: 10px 10px 10px 20px;
+    padding: 5px0px;
+    color: #464646;
+    font-weight: 600;
+    /*    padding: 0px 50px 0px 0px;*/
+}
+
+.car_extra_same1 {
+    margin: 20px 0px 0px 0px;
+    padding: 7px 5px 7px 10px;
+    font-family: "Source Sans Pro", sans-serif;
+    /*    border-left: 5px solid red;*/
+    font-size: 20px;
+    font-weight: 600;
+    color: #3e3d3d;
+   display: flex;
+   align-items: center;
+
+    /*    border-top: 1px solid #d1d1d1;*/
+    /*    border-bottom: 1px solid #d1d1d1;*/
+
+}
+
+
+/*.car_extra_same1::before {
+    font-size: 18px;
+    content: "";
+    border-left: 5px solid #ff0000;
+    margin-left: 7px;
+    margin-right: 7px;
+    margin-top: 5px;
+    padding: 1px 0px;
+}*/
+
+
+.extra__item1 {
+    width: 25%;
+    padding: 5px 5px 5px 5px;
+
+}
+
+@media (max-width: 800px) {
+   .extra__item1 {
+      width: 33.333%;
+   }
+}
+
+@media (max-width: 600px) {
+   .extra__item1 {
+      width: 50%;
+   }
+}
+
+@media (max-width: 400px) {
+   .extra__item1 {
+      width: 100%;
+   }
+}
+
+.input_extra {
+    width: 33.33333%;
+    padding: 0px 5px 0px 10px;
+}
+
+.extra_item_checkbox {
+    margin: 5px 2px 0px 5px;
+
+}
+
+.extra_item_label {
+    margin: 5px 10px 0px 0px;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.photo_add_main {
+    margin: 0 auto 20px;
+   border: 2px dashed #ff8900;
+/*    padding: 5px 5px;*/
+   position: relative;
+}
+
+.photo_border_add {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+/*    border: 2px dashed #ff8900;*/
+    /*    align-content: stretch;*/
+}
+
+.photo_border_add1 {
+   position: absolute;
+   display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+/*    border: 2px dashed #ff8900;*/
+    /*    align-content: stretch;*/
+   top: 0px;
+   left: 0px;
+}
+
+.add_photo_a {
+    width: 25%;
+    padding: 5px 5px;
+
+
+}
+
+.add_photo_t {
+/*    width: 25%;*/
+    position: relative;
+    padding: 0 0 67% 0;
+/*    text-align: center;*/
+/*    height: 180px;*/
+    overflow: hidden;
+
+     border: 1px solid #ebebeb;
+
+}
+
+.add_photo_t:hover {
+
+    border: 1px solid #b2b2b2;
+    box-shadow: 0px 0px 1px 1px rgba(173, 173, 173, 0.52);
+
+
+}
+
+.photo_upload_signs {
+/*    display: none;*/
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1;
+    color: white;
+    padding: 2px 2px;
+    background: rgba(0, 30, 129, 0.82);
+/*   background-color: orangered;*/
+    position: absolute;
+    cursor: pointer;
+}
+
+.right_arw {
+    right: 22px;
+    bottom: 0px;
+    z-index: 1001;
+}
+
+.left_arw {
+    right: 43px;
+    bottom: 0px;
+    z-index: 1002;
+}
+
+.del_arw {
+    padding: 2px 2px;
+    right: 0px;
+    bottom: 0px;
+    z-index: 1003;
+/*    color: red;*/
+}
+
+
+
+.left_arw:hover,
+.right_arw:hover,
+.del_arw:hover {
+    background: #03a3eb;
+}
+
+.left_arw:active,
+.right_arw:active,
+.del_arw:active {
+    background: #016e9f;
+}
+
+.view_text {
+    padding: 2px 6px;
+    font-size: 14px;
+    right: 0px;
+    top: 0px;
+    z-index: 1004;
+    cursor: default;
+}
+
+/*
+.photo_upload {
+    position: absolute;
+    z-index: 1000;
+}
+*/
+
+
+.add_photo_style_t {
+/*    display: block;*/
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    cursor: pointer;
+/*    object-fit: cover;*/
+/*    max-width: 100%;*/
+/*    height: auto;*/
+
+
+/*    margin: 10px; 15px;*/
+/*    padding: 5px 10px;*/
+}
+
+
+
+
+.add_photo0 {
+/*    width: 70%;*/
+    height: auto;
+    margin: 20px auto;
+    font-size: 14px;
+
+}
+
+.add_photo {
+    align-content: center;
+    align-items: center;
+    width: 19%;
+    object-fit: contain;
+/*    height: auto;*/
+    height: 160px;
+    margin: 5px 5px 5px 5px;
+    border: 1px solid grey;
+    overflow: hidden;
+    text-align: center;
+/*    position: relative;*/
+
+}
+
+.add_photo_thmb {
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
+}
+
+
+
+.add_photo_style {
+    width: 100%;
+    margin: 0 auto;
+
+    display: block;
+    width: 166.19;
+/*    vertical-align: middle;*/
+/*    align-content: center;*/
+/*    align-items: center;*/
+/*    height: 96.39px;*/
+/*    height: auto;*/
+    /*    margin: 10px; 15px;*/
+    /*    padding: 5px 10px;*/
+/*    position: absolute;*/
+/*    top: 45%;*/
+/*    left: 45%;*/
+}
+
+.input_contact_add {
+    margin: 10px 10px 10px 10px;
+    border: 1px solid #9d9d9d;
+/*    width: 230px;*/
+    width: 22%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    color: #777;
+    font-size: 14px;
+    padding: 10px 5px;
+    border-radius: 4px;
+
+}
+
+.input_mileage_add {
+    margin: 10px 10px 10px 10px;
+    width: 45%;
+    border: 1px solid #9d9d9d;
+/*    width: 230px;*/
+    font-family: 'Roboto', sans-serif;
+/*    font-size: 18px;*/
+    color: #777;
+    font-size: 14px;
+/*    padding: 5px 0px;*/
+    padding: 9px 3px 9px 3px;
+    background-color: white;
+    border-radius: 4px;
+    -moz-appearance: none;
+
+}
+
+.input_contact_add:hover,
+.input_mileage_add:hover,
+.input_mileage_search_all:hover {
+    border: 1px solid #005d8e;
+    background-color: #f7f7f7;
+/*    box-shadow: 0 0 5px 3px rgba(0, 149, 185, 0.52); */
+}
+
+.input_contact_add:focus,
+.input_mileage_add:focus,
+.input_mileage_search_all:focus {
+    border: 1px solid #005d8e;
+    outline: none;
+/*    background-color: #f7f7f7;*/
+/*    outline-style: dashed;*/
+    background-color: #f7f7f7;
+    box-shadow: 0px 0px 1px 1px rgba(0, 149, 185, 0.52);
+}
+
+.btn_submit {
+    display: block;
+    margin: 30px auto;
+    width: 240px;
+    vertical-align: top;
+    background-color: red;
+    border: 1px solid #ff0000;
+    padding: 14px 40px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Raleway';
+    font-size: 14px;
+    text-align: center;
+    color: white;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: background .1s linear;
+}
+
+.btn_submit:hover {
+   background-color: #e60000;
+   box-shadow: 0px 0px 1px 1px rgba(237, 0, 0, 0.52);
+}
+
+@media (max-width: 960px) {
+   .marka_model_add {
+        flex-direction: column;
+    }
+
+    .marka_model_search {
+        flex-direction: column;
+    }
+
+     .label_add,
+   .label_add1 {
+    width: 95%;
+    margin: 10px 10px 2px 20px;
+    }
+
+    .label_search_all {
+    width: 95%;
+    margin: 10px 10px 2px 20px;
+    }
+
+    .marka_model_search_curency {
+    display: flex;
+    margin: 5px 0px 0px 30px;
+    }
+
+    .label_search_all_c {
+    width: 5%;
+    margin: 10px 10px 2px 20px;
+    }
+
+    .label_add_textarea {
+    margin: 15px 5px 5px 25px;
+    }
+
+    .select_add {
+    margin: 0 auto;
+    width: 90%;
+    }
+
+    .input_mileage_add {
+    margin: 0 auto;
+    width: 90%;
+
+    }
+
+    .input_mileage_search_all {
+    margin: 0 auto;
+    width: 40%;
+    }
+
+    .input_search_all {
+        margin: 0px 0px 0px 10px;
+    }
+
+    .input_contact_add {
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: 15px;
+        width: 270px;
+    }
+
+    .select_add_t1 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 15px;
+    width: 270px;
+    }
+
+    .input_add {
+    margin: 0px 5px 10px 20px;
+    }
+
+    .label_checkbox_add {
+    width: 120px;
+    font-size: 14px;
+        margin: 0px 5px 10px 5px;
+    }
+   
+   .label_checkbox_add1 {
+    width: 120px;
+    font-size: 14px;
+   margin: 0px 5px 10px 5px;
+    }
+   
+
+    .textarea_add {
+    width: 95%;
+        margin: 0 auto;
+    }
+
+    .add_photo {
+
+    width: 25%;
+    align-content: center;
+    align-items: center;
+    }
+
+    .add_photo_a {
+    width: 25%;
+    }
+
+    .dealer_one_logo {
+        width: 50%;
+
+    }
+}
+
+@media (max-width: 750px) {
+   .add_photo_a {
+    width: 33.333%;
+    }
+}
+
+@media (max-width: 600px) {
+   .add_photo_a {
+    width: 50%;
+    }
+}
+
+@media (max-width: 670px) {
+   .cars__item2 {
+        width: 100%;
+    }
+}
+
+/* 404 page styles */
+
+.intro3 {
+    position: relative;
+    width: auto;
+/*    width: 1200px;*/
+    height: 500px;
+    background-color: #ffffff;
+    background-image: url("../img/404.jpg");
+    background-position: right center;
+    background-repeat: no-repeat;
+/*    background-size: cover;*/
+}
+
+.p404 {
+    position: absolute;
+    color: #ee5624;
+    font-size: 130px;
+    margin: 0 70px;
+    left 10%;
+    top: 15%;
+    background-color: rgba(255, 255, 255, 0.75);
+   font-weight: 700;
+    }
+
+
+.p404_h2 {
+    position: absolute;
+    color: #ee5624;
+    font-size: 40px;
+    margin: 0 80px;
+   font-weight: 700;
+    left 10%;
+    bottom: 30%;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.main_btn {
+    position: absolute;
+    padding: 9px 12px;
+    font-size: 18px;
+    font-weight: 600;
+    margin: 0 80px;
+    color: white;
+    text-decoration: none;
+    background-color: #ee5624;
+    left 10%;
+    bottom: 20%;
+}
+
+/* Agency all page */ 
+.agency__filtr {
+   cursor: pointer;
+   outline: none;
+}
+
+@media (max-width: 330px) {
+   .icon_salon {
+      display: none;
    }
 }
 
