--- a/css/style.css
+++ b/css/style.css
@@ -5678,8 +5678,28 @@ outline: none;
 /* Agency report styles */
 
 .agency__report {
-   margin-bottom: 20px;
+/*   margin-bottom: 20px;*/
+   margin: 0px 0px;
+   height: 0;
+    opacity: 0;
+    overflow: hidden;
+    will-change: max-height;
+    transition: all 0.4s ease-out;
+   border-bottom: 1px solid #d1d1d1;
 }
+
+.agency__report.open {
+   margin: 5px 0px 10px;
+   height: 100px;
+    opacity: 1;
+}
+
+@media (max-width: 850px) {
+   .agency__report.open {
+   height: 150px;
+}
+}
+
 
 .agency__report-container {
    max-width: 900px;
@@ -5698,7 +5718,7 @@ outline: none;
 */
    display: flex;
    justify-content: center;
-   margin: 0 auto;
+   margin: 10px auto;
    flex-wrap: wrap;
 }
 .agency_report_item {
