--- a/css/style.css
+++ b/css/style.css
@@ -1852,6 +1852,11 @@ f
    fill: #ff8900;
 }
 
+.icon-fav {
+   width: 20px;
+   height: 17px;
+   fill: #ff125b;
+}
 
 
 @media (max-width: 530px) {
@@ -5819,6 +5824,33 @@ outline: none;
    }
 }
 
+/* Favorites page styles */
+
+.favorites_not_found {
+}
+.favorites_not_found_container {
+}
+
+.fav_notfound_text {
+   text-align: center;
+   font-size: 20px;
+   font-weight: 700;
+   padding: 20px 20px 10px;
+   color: darkblue;
+}
+
+.favorites_not_found__image {
+   margin: 20px auto 20px;
+   max-width: 500px;
+   border: 1px solid grey;
+   border-radius: 15px;
+}
+
+.favorites_not_found__image img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
 
 
 
