--- a/css/style.css
+++ b/css/style.css
@@ -567,15 +567,15 @@ legend {
    margin-left: 20px;
 }
 .header__logo-link {
-   max-width: 170px;
+   width: 170px;
    display: block;
    padding: 10px;
 }
 
 .header__logo-link img {
-   width: 100%;
+      width: 100%;
    height: 100%;
-   object-fit: contain;
+   object-fit: cover;
 }
 
 .header__logo-picture {
@@ -666,14 +666,14 @@ legend {
        font-size: 14px;
    }
    
+/*
    .about_page-banners {
       height: 200px;
    }
+*/
  
-/*
       .about_page-header {
       height: 200px;
-*/
          
 }
 }
@@ -4079,6 +4079,7 @@ display: none;
     will-change: max-height;
     transition: all 0.4s ease-out;
    border-bottom: 1px solid #d1d1d1;
+   box-sizing: content-box;
 }
 
 .estate__share.open {
@@ -4808,8 +4809,7 @@ outline: none;
     font-size: 14px;
     margin: 0px 10px 10px 0px;
     /*    margin: 10px 10px 10px 15px;*/
-    padding: 5px;
-    0px;
+    padding: 5px, 0px;
     color: #464646;
     font-weight: 600;
     /*    padding: 0px 50px 0px 0px;*/
@@ -4997,18 +4997,28 @@ outline: none;
    position: absolute;
    display: flex;
     flex-wrap: wrap;
+   
     width: 100%;
 /*    border: 2px dashed #ff8900;*/
     /*    align-content: stretch;*/
    top: 0px;
    left: 0px;
+/*   z-index: 0;*/
 }
 
 .add_photo_a {
-    width: 25%;
+width: 25%;
     padding: 5px 5px;
+/*   width: 250px;*/
 
+}
 
+.add_photo_b {
+width: 25%;
+    padding: 5px 5px;
+/*   width: 250px;*/
+/*   z-index: -1;*/
+/*   z-index: 1500;*/
 }
 
 .add_photo_t {
@@ -5975,7 +5985,7 @@ outline: none;
 .contact_us_parts {
     display: flex;
     justify-content: space-between;
-    padding: 40px 0px 40px 0px;
+    paddving: 40px 0px 40px 0px;
 /*    margin: 40px auto;*/
 
 
@@ -6125,6 +6135,54 @@ font-size: 16px;
         padding: 0 10px;
 }
 }
+
+/*  Car Aprove Styles  */
+
+.car_ads_number {
+    display: block;
+    width: 50%;
+    align-items: center;
+    align-content: center;
+    margin: 2px auto;
+    text-align: center;
+    color: #6d6d6d;
+    background-color: white;
+    border: 1px solid #e5e5e5;
+    padding: 10px;
+    border-radius: 5px;
+    outline: none;
+    font-size: 16px;
+}
+
+.car_ads_number_h2 {
+    color: yellow;
+    margin: 15px 5px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.car_ads_number_btn {
+
+    display: block;
+    width: 40%;
+    padding: 7px 15px;
+    background-color: #00a7d9;
+    border: 1px solid #00a7d9;
+    margin: 10px auto;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    text-decoration: none;
+    color: white;
+    font-weight: 600;
+    border-radius: 12px;
+    font-size: 15px;
+    outline: none;
+
+}
+
+
 
 /*  Footer Styles */
 
